--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,9 @@
         android:id="@+id/listEventos"
         android:layout_width="411dp"
         android:layout_height="456dp"
-        android:layout_marginTop="244dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEventos" />
 
@@ -67,17 +68,5 @@
         app:layout_constraintStart_toEndOf="@+id/txtDescripcion"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/reloj" />
-
-    <Button
-        android:id="@+id/btnPrueba"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="197dp"
-        android:text="Prueba de Evento creado"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEventos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
